# SekibanWasmRuntime

./: .dockerignore  .gitignore  .gitmodules  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NOTICE  NuGet.config  README.md  benchmark-cs-wasm-20260331-162937.json  benchmark-cs-wasm-final-300k.json  benchmark-native-300k-fixed.json  benchmark-native-quick.json  benchmark-rs-wasm-final-300k.json  benchmark-rs-wasm-memopt-300k.json  benchmark-rs-wasm-memv2-300k.json  benchmark-rs-wasm-optimized-20260331-201633.json  benchmark-rs-wasm-optimized-5k.json
.github/release-notes/: nuget-preview.md
.github/workflows/: ci.yml  release-ghcr-image-preview.yml  release-go-sdk.yml  release-moonbit-packages.yml  release-npm-ts.yml  release-nuget-preview.yml  release-rust-crates-first-publish.yml  release-rust-crates.yml  release-swift-sdk.yml  release-templates-preview.yml
benchmarks/Sekiban.Benchmark.Cli/: BenchmarkRunner.cs  HttpApiClient.cs  Program.cs  Sekiban.Benchmark.Cli.csproj
benchmarks/results/: BENCHMARK-RESULTS.md  cs-wasm-10k-postfix.json  cs-wasm-300k-20260403-split-clean.json  cs-wasm-300k-20260403.json  cs-wasm-300k-20260404.json  cs-wasm-300k-grain.json  cs-wasm-300k-postfix.json  cs-wasm-300k-quickonly-packagealigned.json  cs-wasm-300k-tagstategrain-memory-20260408-http-analysis.json  cs-wasm-300k-tagstategrain-memory-20260408.json  cs-wasm-300k.json  cs-wasm-30k-20260402.json  cs-wasm-30k-20260403-cache.json  cs-wasm-30k-20260403-fixed-rss.json  cs-wasm-30k-20260403-fixed.json  cs-wasm-30k-20260403-opt.json  cs-wasm-30k-20260403.json  cs-wasm-50k-draftonly.json  cs-wasm-50k-grain.json  cs-wasm-50k-postfix.json  cs-wasm-50k-quickonly-packagealigned.json  cs-wasm-50k-quickonly.json  cs-wasm-50k-tagstategrain-memory-20260408-fix2.json  go-wasm-300k-grain.json  go-wasm-300k-quickonly-strict-20260408.json  go-wasm-300k-tagstategrain-memory-20260408.json  go-wasm-300k.json  go-wasm-50k-grain.json  go-wasm-50k-quickonly-strict-20260408.json  go-wasm-50k-strict-aligned.json  go-wasm-50k.json  mb-wasm-300k-20260404.json  mb-wasm-300k-grain.json  mb-wasm-300k-quickonly-strict-20260408.json  mb-wasm-300k-shared-lib.json  mb-wasm-300k-tagstategrain-memory-20260408.json  mb-wasm-30k-20260402.json  mb-wasm-30k-20260403.json  mb-wasm-50k-grain.json  mb-wasm-50k-quickonly-strict-20260408.json  (+44 more)
docker/sekiban-wasm-runtime/: README.md  docker-compose.yml
docs/: benchmark-results.md  quickstart.md  runtime-memory-profiles.md
docs/compatibility/: sekiban-as-a-service-boundary.md
docs/nuget/: aspire-package-readme.md  package-readme.md  templates-package-readme.md
docs/release/: code-repository-release-checklist.md  ghcr-image-preview.md  go-sdk-release-lane.md  migration-notes.md  moonbit-package-release-lane.md  npm-ts-preview-readiness.md  npm-ts-release-lane.md  nuget-preview-release-checklist.md  nuget-preview-release-preparation.md  nuget-preview-release.md  release-tag-conventions.md  runtime-host-mv-public-artifact-evidence.md  (+12 more)
scripts/: aggregate-matrix-results.py  analyze-apphost-http-log.py  build-samples-wasm.sh  build-wasm.sh  check-public-hygiene.sh  e2e-aspire-playwright.sh  e2e-aspire-smoke.sh  e2e-clientapi-flow.sh  run-benchmark-matrix.sh  run-benchmark-runtime.sh  smoke-runtime-compose.sh
src/: SekibanWasmRuntime.ci.slnx  SekibanWasmRuntime.slnx
src/internalUsages/rust/SekibanWasm.Rust.ClientApi/: Cargo.toml  SekibanWasm.Rust.ClientApi.csproj
src/internalUsages/rust/SekibanWasm.Rust.ClientApi/src/: main.rs
src/samples/Sekiban.Dcb.Orleans.Decider.Wasm.Rs/SekibanDcbDecider.ClientApi/: Cargo.toml
src/samples/Sekiban.Dcb.Orleans.Decider.Wasm.Rs/SekibanDcbDecider.ClientApi/src/: main.rs  materialized_view.rs
src/samples/Sekiban.Dcb.Orleans.Decider.Wasm.Rs/SekibanDcbDecider.Rust.EventSource/: Cargo.toml
src/samples/Sekiban.Dcb.Orleans.Decider.Wasm.Rs/SekibanDcbDecider.Rust.EventSource/src/: commands.rs  events.rs  lib.rs  materialized_view.rs  projectors.rs  queries.rs  states.rs  tags.rs
src/samples/Sekiban.Dcb.Orleans.Decider.Wasm.Rs/SekibanDcbDecider.Rust.Wasm/: Cargo.toml
src/samples/Sekiban.Dcb.Orleans.Decider.Wasm.Rs/SekibanDcbDecider.Rust.Wasm/src/: lib.rs
src/samples/Sekiban.Dcb.WasmRuntime.CratesIo.RsDecider/Client/: Cargo.toml
src/samples/Sekiban.Dcb.WasmRuntime.CratesIo.RsDecider/Client/src/: main.rs
src/samples/Sekiban.Dcb.WasmRuntime.CratesIo.RsDecider/Domain/: Cargo.toml
src/samples/Sekiban.Dcb.WasmRuntime.CratesIo.RsDecider/Domain/src/: lib.rs
src/samples/Sekiban.Dcb.WasmRuntime.PublicContainer.RsDecider/Client/: Cargo.toml
src/samples/Sekiban.Dcb.WasmRuntime.PublicContainer.RsDecider/Client/src/: main.rs
src/samples/Sekiban.Dcb.WasmRuntime.PublicContainer.RsDecider/Wasm/: Cargo.toml
src/samples/Sekiban.Dcb.WasmRuntime.PublicContainer.RsDecider/Wasm/src/: lib.rs
src/wasm-projectors/rust/: Cargo.toml
src/wasm-projectors/rust/domain/: Cargo.toml
src/wasm-projectors/rust/domain/src/: events.rs  lib.rs  materialized_view.rs  projectors.rs  queries.rs
src/wasm-projectors/rust/sekiban-core/: Cargo.toml  README.md
src/wasm-projectors/rust/sekiban-core/src/: command.rs  event.rs  lib.rs  macros.rs  prelude.rs  projector.rs  query.rs  registry.rs  state.rs  tag.rs
src/wasm-projectors/rust/sekiban-derive/: Cargo.toml  README.md
src/wasm-projectors/rust/sekiban-derive/src/: command.rs  event.rs  lib.rs  projector.rs  state.rs  tag.rs
src/wasm-projectors/rust/sekiban-executor/: Cargo.toml  README.md
src/wasm-projectors/rust/sekiban-executor/src/: lib.rs
src/wasm-projectors/rust/sekiban-mv/: Cargo.toml  README.md
src/wasm-projectors/rust/sekiban-mv/src/: dto.rs  export.rs  lib.rs  param_builder.rs  projector.rs  query_port.rs
src/wasm-projectors/rust/sekiban-wasm/: Cargo.toml  README.md
src/wasm-projectors/rust/sekiban-wasm/src/: compat.rs  exports.rs  ffi.rs  instance.rs  lib.rs  manifest.rs  memory.rs  prelude.rs
src/wasm-projectors/rust/wasm-projector/: Cargo.toml
src/wasm-projectors/rust/wasm-projector/src/: lib.rs
(+882 files in other folders)
