[package]
name = "sekiban-dcb-decider-clientapi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sekiban-core = { path = "../../../wasm-projectors/rust/sekiban-core" }
sekiban-executor = { path = "../../../wasm-projectors/rust/sekiban-executor" }
sekiban-dcb-decider-rust-eventsource = { path = "../SekibanDcbDecider.Rust.EventSource" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
