[package]
name = "crates-io-rs-decider-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
crates-io-rs-decider-domain = { path = "../Domain" }
sekiban-core = "=0.1.0"
sekiban-executor = "=0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v7"] }
