[package]
name = "public-container-rs-decider-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
sekiban-core = { path = "../../../wasm-projectors/rust/sekiban-core" }
sekiban-executor = { path = "../../../wasm-projectors/rust/sekiban-executor" }
sekiban-wasm-domain = { path = "../../../wasm-projectors/rust/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v7"] }
