[package]
name = "public-container-rs-decider-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sekiban-core = { path = "../../../wasm-projectors/rust/sekiban-core" }
sekiban-mv = { path = "../../../wasm-projectors/rust/sekiban-mv" }
sekiban-wasm = { path = "../../../wasm-projectors/rust/sekiban-wasm" }
sekiban-wasm-domain = { path = "../../../wasm-projectors/rust/domain" }
serde_json = "1"
