[package]
name = "sekiban-wasm-domain"
version = "0.1.0"
edition = "2021"
description = "Internal sample/reference Sekiban Rust domain; not a public crates.io artifact."
publish = false

[lib]
name = "sekiban_wasm_domain"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v7"] }
sekiban-core = { path = "../sekiban-core" }
sekiban-derive = { path = "../sekiban-derive" }
sekiban-mv = { path = "../sekiban-mv" }
