[package]
name = "sekiban-core"
version = "0.1.0"
description = "Core Sekiban Rust domain traits, DTOs, registries, and projection contracts."
documentation = "https://docs.rs/sekiban-core"
categories = ["data-structures", "wasm"]
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
