[package]
name = "sekiban-executor"
version = "0.1.0"
description = "HTTP executor client for serialized Sekiban WASM runtime endpoints."
documentation = "https://docs.rs/sekiban-executor"
categories = ["web-programming::http-client", "api-bindings"]
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
sekiban-core = { version = "=0.1.0", path = "../sekiban-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
