[package]
name = "sekiban-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM export boundary helpers for Sekiban Rust projection modules."
repository = "https://github.com/J-Tech-Japan/SekibanWasmRuntime"
license = "Elastic-2.0"
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]

[dependencies]
sekiban-core = { version = "=0.1.0", path = "../sekiban-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
