[package]
name = "sekiban-wasm"
version = "0.1.0"
description = "WASM export boundary helpers for Sekiban Rust projection modules."
documentation = "https://docs.rs/sekiban-wasm"
categories = ["wasm", "api-bindings"]
readme = "README.md"
include = ["Cargo.toml", "README.md", "src/**"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sekiban-core = { version = "=0.1.0", path = "../sekiban-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
