[package]
name = "sekiban-wasm-projector"
version = "0.1.0"
edition = "2021"
description = "Internal sample WASM projector module; not a public crates.io artifact."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
sekiban-core = { path = "../sekiban-core" }
sekiban-wasm = { path = "../sekiban-wasm" }
sekiban-mv = { path = "../sekiban-mv" }
sekiban-wasm-domain = { path = "../domain" }
serde_json = "1"
